test/fail/prim-in-source.mo
let x : Int -> Int = prim "aprim"; ()
